# RiscV-Simulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MM.cc  MM.h  Makefile  Read_Elf.cc  Read_Elf.h  Readme.md  Simulator  Simulator.cc  Simulator.h  cmake_install.cmake  decode.cc  execute.cc  fetch.cc  machine.h  main.cc  memory.cc  writeBack.cc
codes/: mat.c  print.c  quick.c
elfs/: ack.riscv  mat.riscv  quick.riscv
lab2-RISCV模拟器设计/: ~$b2-模拟器设计.docx
src-codes/: MM.cc  MM.h  Simulator.cc  Simulator.h  cache.cc  cache.h  decode.cc  execute.cc  fetch.cc  machine.h  main.cc  memory.cc  storage.h
testcodes/: ack.c  mat.c  print.h  quick.c
trace/: 01-mcf-gem5-xcg.trace.big.csv  01-mcf-gem5-xcg.trace.csv  01-mcf-gem5-xcg.trace.small.csv  02-stream-gem5-xaa.trace.big.csv  1.trace.csv  test.trace  test.trace.csv
yuv/: image  image.cc  计算机体系结构实习LAB4.md
yuv/avxdem1/: a40.yuv  a84.yuv
yuv/floatdem1/: a0.yuv  a1.yuv  a10.yuv  a11.yuv  a12.yuv  a13.yuv  a14.yuv  a15.yuv  a16.yuv  a17.yuv  a18.yuv  a19.yuv  a2.yuv  a20.yuv  a21.yuv  a22.yuv  a23.yuv  a24.yuv  a25.yuv  a26.yuv  a27.yuv  a28.yuv  a29.yuv  a3.yuv  a30.yuv  a31.yuv  a32.yuv  a33.yuv  a34.yuv  a35.yuv  a36.yuv  a37.yuv  a38.yuv  a39.yuv  a4.yuv  a40.yuv  a41.yuv  a42.yuv  a43.yuv  a44.yuv  (+45 more)
yuv/mmxdem1/: a40.yuv  a84.yuv
yuv/ssedem1/: a40.yuv  a84.yuv
